FIX: Spacing on Haskell example. Made it consistent with other example.

--- a/pre_proposal/presentation/style/style.css
+++ b/pre_proposal/presentation/style/style.css
@@ -247,3 +247,7 @@ pre code {
     border-radius: 4px;
     padding: 0em 2em 0em;
 }
+
+pre code .prettyprint {
+    padding-bottom: 1em;
+}
